# diary-coach

./: .env.example  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  README.md  conftest.py  debug_langsmith.py  docker-compose.yml  mcp_sandbox.py  pyproject.toml  pytest.ini  requirements.txt  run_eval.py  run_integration_tests.sh  run_multi_agent.py  status.md  test_claude_web_search_agent.py  test_debug_flow.py  test_evaluator.py  test_fast_evaluator_comprehensive.py  test_manual_eval.py  test_mcp_integration.py  test_stage3_simple.py  test_unified_stage3.py  test_web_search_integration.py  test_web_search_simple.py
.obsidian/: workspace.json
apidocs/: elevenlabs_documentation.md  elevenlabs_search_results.md  langgraph_documentation.md  langgraph_search_results.md  livekit_documentation.md  livekit_search_results.md  playwright_documentation.md  playwright_search_results.md  todoist_mcp_documentation.md  webrtc_debugging_documentation.md  webrtc_debugging_search_results.md
docs/: Evaluations_new.md  MCP_howto  OldDeepThoughtsPrompt.md  ProductVision  Refactor  Roadmap.md  VibeCodingManifesto  VibeCodingManifesto.md  dev_setup.md  evals_howto.md  evaluation_experiments.md  evaluation_system_guide.md  learning_ledger.md  lesson_plan.md  multi_agent_setup.md  observability_tools.md  status.md  test_configuration_update.md  web_search_integration_guide.md
evaluation_results/: automated_eval_20250722_210059.json  automated_eval_20250722_210124.json  automated_eval_20250722_210754.json
scripts/: auto_tts_after_session.py  check_missing_docs.py  (+33 more)
(+505 files in other folders)
